--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
                 </div>
                 
                 <div class="max-w-2xl mx-auto glass-card p-8 rounded-2xl">
-                    <form action="https://formsubmit.co/your@email.com" method="POST" enctype="multipart/form-data">
+                    <form action="https://formsubmit.co/sgyi9628@gmail.com" method="POST" enctype="multipart/form-data">
                         <input type="hidden" name="_subject" value="New Game Top-Up Order!">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://yourwebsite.com/thankyou.html"> 
+                        <input type="hidden" name="_next" value="https://psonline.shop/thankyou.html"> 
                         
                         <div class="mb-6 hidden">
                             <label class="block mb-2 font-bold text-slate-300">၁. ဂိမ်းရွေးချယ်ပါ</label>
