--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 </div>
                 
                 <div class="max-w-2xl mx-auto glass-card p-8 rounded-2xl">
-                    <form action="https://formsubmit.co/psonlineshopa@email.com" method="POST" enctype="multipart/form-data">
+                    <form action="https://formsubmit.co/psonlineshopa@gmail.com" method="POST" enctype="multipart/form-data">
                         <input type="hidden" name="_subject" value="New Game Top-Up Order!">
                         <input type="hidden" name="_captcha" value="false">
                         <input type="hidden" name="_next" value="https://psonline.shop/thankyou.html"> 
