--- a/thankyou.html
+++ b/thankyou.html
@@ -30,7 +30,7 @@
             </svg>
         </div>
         <h1 class="text-3xl md:text-4xl font-bold text-white mb-4">ကျေးဇူးတင်ပါတယ်</h1>
-        <p class="text-slate-300 mb-8 text-lg">သင်၏အော်ဒါကို ကျွန်ုပ်တို့ လက်ခံရရှိပါသည်။ Top-Up ဖြည့်သွင်းပြီးစီးပါက သင်၏ WhatsApp နံပါတ်သို့ အကြောင်းကြားစာ ပေးပို့ပေးပါမည်။</p>
+        <p class="text-slate-300 mb-8 text-lg">သင်၏အော်ဒါကို ကျွန်ုပ်တို့ လက်ခံရရှိပါသည်။</p>
         <a href="index.html" class="inline-block bg-cyan-500 hover:bg-cyan-600 text-slate-900 font-bold py-3 px-8 rounded-lg transition duration-300">
             ပင်မစာမျက်နှာသို့ ပြန်သွားရန်
         </a>
