--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <iframe
-            src="https://phoe2004-recap-shan.hf.space"
+            src="https://phoe2004-MovieRecapai.hf.space"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen>
         </iframe>
