--- a/index.html
+++ b/index.html
@@ -6,112 +6,101 @@
     <title>AI Recap Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
-        :root {
-            --primary: #6366f1;
-            --dark: #0f172a;
-            --sidebar-width: 260px;
+        * { margin: 0; padding: 0; box-sizing: border-box; }
+        body { font-family: 'Inter', system-ui, -apple-system, sans-serif; background: #0f172a; color: white; height: 100vh; overflow: hidden; }
+
+        /* Main App Layout */
+        .app-wrapper { display: flex; flex-direction: column; height: 100vh; }
+
+        /* Navigation Bar */
+        .nav-tabs { 
+            display: flex; 
+            background: #1e293b; 
+            padding: 10px; 
+            gap: 10px; 
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
         }
 
-        body {
-            margin: 0;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f1f5f9;
-            display: flex;
-            height: 100vh;
-        }
-
-        /* Sidebar Design */
-        .sidebar {
-            width: var(--sidebar-width);
-            background-color: var(--dark);
-            color: white;
-            display: flex;
-            flex-direction: column;
-            padding: 20px 0;
-            box-shadow: 4px 0 10px rgba(0,0,0,0.1);
-        }
-
-        .logo {
-            padding: 0 25px 30px;
-            font-size: 20px;
-            font-weight: bold;
-            color: var(--primary);
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-
-        .nav-item {
-            padding: 15px 25px;
-            cursor: pointer;
-            transition: 0.3s;
-            display: flex;
-            align-items: center;
-            gap: 15px;
-            font-size: 15px;
+        .tab-btn {
+            flex: 1;
+            padding: 12px;
+            border: none;
+            border-radius: 8px;
+            background: transparent;
             color: #94a3b8;
+            font-weight: 600;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 8px;
+            transition: 0.3s;
         }
 
-        .nav-item:hover, .nav-item.active {
-            background: #1e293b;
+        .tab-btn.active {
+            background: #6366f1;
             color: white;
-            border-left: 4px solid var(--primary);
         }
 
         /* Content Area */
-        .main-content {
-            flex-grow: 1;
-            display: flex;
-            flex-direction: column;
-        }
-
-        .top-bar {
-            height: 60px;
-            background: white;
-            display: flex;
-            align-items: center;
-            padding: 0 30px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.05);
-            font-weight: 600;
-        }
-
-        .iframe-container {
-            flex-grow: 1;
-            padding: 20px;
-        }
-
+        .content-area { flex: 1; position: relative; width: 100%; }
         iframe {
-            width: 100%;
-            height: 100%;
-            border-radius: 12px;
-            border: 1px solid #e2e8f0;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.05);
-            background: white;
+            position: absolute;
+            top: 0; left: 0;
+            width: 100%; height: 100%;
+            border: none;
+            display: none;
         }
+        iframe.active { display: block; }
 
-        .hidden { display: none; }
+        /* Mobile Header */
+        .header {
+            padding: 15px;
+            text-align: center;
+            background: #0f172a;
+            border-bottom: 1px solid #334155;
+            font-size: 18px;
+            font-weight: bold;
+            color: #6366f1;
+        }
     </style>
 </head>
 <body>
 
-    <div class="sidebar">
-        <div class="logo">
-            <i class="fa-solid fa-bolt"></i> RECAP HUB
-        </div>
-        
-        <div class="nav-item active" onclick="switchSpace('shan')">
-            <i class="fa-solid fa-language"></i> Shan Recap
-        </div>
-        
-        <div class="nav-item" onclick="switchSpace('animal')">
-            <i class="fa-solid fa-paw"></i> Animal Recap
+    <div class="app-wrapper">
+        <div class="header">
+            <i class="fa-solid fa-robot"></i> RECAP CENTER
         </div>
 
-        <div style="margin-top: auto; padding: 25px; font-size: 12px; color: #475569;">
-            Developer Mode: ON
+        <div class="nav-tabs">
+            <button class="tab-btn active" onclick="showSpace('shan', this)">
+                <i class="fa-solid fa-language"></i> Shan
+            </button>
+            <button class="tab-btn" onclick="showSpace('animal', this)">
+                <i class="fa-solid fa-paw"></i> Animal
+            </button>
+        </div>
+
+        <div class="content-area">
+            <iframe id="shan-frame" class="active" src="https://phoe2004-recap-shan.hf.space"></iframe>
+            <iframe id="animal-frame" src="https://phoe2004-animal-recap.hf.space"></iframe>
         </div>
     </div>
 
+    <script>
+        function showSpace(type, btn) {
+            // Hide all iframes
+            document.querySelectorAll('iframe').forEach(f => f.classList.remove('active'));
+            // Remove active from all buttons
+            document.querySelectorAll('.tab-btn').forEach(b => b.classList.remove('active'));
+
+            // Show selected
+            document.getElementById(type + '-frame').classList.add('active');
+            btn.classList.add('active');
+        }
+    </script>
+</body>
+</html>
     <div class="main-content">
         <div class="top-bar" id="current-title">
             Shan Recap Interface
